--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
         <!-- notebook -->
         <div class="notebook">
             <input type="text" id="search" class="search-input" placeholder="Entrer le nom d'un pokemon..">
-            <button id="btn-search" class="btn-search">Rechercher</button>
+            <button id="btn-search" class="btn-search">Search</button>
             <div class="notebook-screen">
                 <div>
                     <div id="pokemon-card" class="pokemon-card">
-                        <img id="pokemon-img" src="" class="pokemon-img">
-                        <h3 id="pokemon-name" class="pokemon-name"></h3>
-                        <p id="pokemon-description" class="pokemon-description"></>
-                        <p id="pokemon-type" class="pokemon-type"></p>
-                        <p id="pokemon-stat" class="pokemon-stat"></p>
+                        <div class="card1">
+                            <img id="pokemon-img" src="" class="pokemon-img">
+                            <h3 id="pokemon-name" class="pokemon-name"></h3>
+                            <p id="pokemon-description" class="pokemon-description"></p>
+                        </div>
+                        <div class="card2">
+                            
+                            <p id="pokemon-type" class="pokemon-type"></p>
+                            <p id="pokemon-stat" class="pokemon-stat"></p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
