--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 </head>
 <body>
     
-    <h1 class="logo">Mini Pokedex</h1>
+    <h1 class="logo">Mini Pokédex</h1>
     
 
     <div class="container">
 
         <!-- notebook -->
         <div class="notebook">
-            <input type="text" id="search" class="search-input" placeholder="Entrer le nom d'un pokemon..">
+            <input type="text" id="search" class="search-input" placeholder="pokemon id or name..">
             <button id="btn-search" class="btn-search">Search</button>
             <div class="notebook-screen">
                 <div>
                     <div id="pokemon-card" class="pokemon-card">
                         <div class="card1">
                             <img id="pokemon-img" src="" class="pokemon-img">
+                            <p id="pokemon-id" class="pokemon-id"></p>
                             <h3 id="pokemon-name" class="pokemon-name"></h3>
-                            <p id="pokemon-type" class="pokemon-type"></p>
+                            <div class="types"></div>
                         </div>
                         <div class="card2">
                             <p id="pokemon-description" class="pokemon-description"></p>
@@ -42,7 +43,7 @@
                 <div class="pokedex">
                     <div class="screen">
                         <img id="pokemon-gif" src="" alt=" " class="pokedex-gif">
-                        <img id="pokedex-image" src="assets/pics/nature.png" alt="Image Pokedex" class="pokedex-img">
+                        <img id="pokedex-image" src="assets/gifs/nature.gif" alt="Image Pokedex" class="pokedex-img">
                     </div>
                 </div>
             </div>
